test_suite/test_programs/errors/error_missing_package.csd
vibe main
fr fr Test: Missing package declaration error
fr fr Purpose: Test error handling when package declaration is missing
fr fr Expected: Should fail with clear error message

fr fr This file intentionally omits the "vibe main" package declaration
fr fr to test error recovery

slay main_character() {
    sus x normie = 42
    damn 0
}
